# minimal_blockchain

./: Cargo.toml  README.md  assignment.txt  message.txt
src/: block.rs  blockchain.rs  client.rs  lib.rs  libp2p_ping.rs  main.rs  main_client.rs  main_server.rs  main_worker.rs  mining.rs  p2p_network.rs  pool.rs  server.rs  simple_transaction.rs  transaction.rs  worker.rs
src/not_used/: README.md  client.rs  main_client.rs  transaction.rs
