[package]
name = "repyh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/main_client.rs"

[[bin]]
name = "server"
path = "src/main_server.rs"

[dependencies]
# Use to hash blocks
sha256 = "1.5.0"

# Use to sign transactions
rsa = { version = "0.9.6", features = ["sha2"]}
rand = "0.8.5"

# Use for a minimalist webserver
rouille = "3.6.2"

# Use for a minimalist http client
reqwest = { version = "0.12", features = ["blocking"] }
