[package]
name = "repyh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/main_client.rs"

[[bin]]
name = "server"
path = "src/main_server.rs"

[[bin]]
name = "node"
path = "src/main_worker.rs"

#[[bin]]
#name = "ping"
#path = "src/libp2p_ping.rs"
#[[bin]]
#name = "chat"
#path = "src/p2p_network.rs"

[dependencies]
# Use to hash blocks
sha256 = "1.5.0"

# Use to sign transactions
rsa = { version = "0.9.6", features = ["sha2"]}
rand = "0.8.5"

# Use for a minimalist webserver
rouille = "3.6.2"

# Use for a minimalist http client
reqwest = { version = "0.12", features = ["blocking"] }

# Deps for the "ping" example...
# libp2p.rs
#libp2p = { version = "0.52", features = ["tcp", "tls", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros"] }
#futures = "0.3.21"
#async-std = { version = "1.12.0", features = ["attributes"] }
#tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Deps for the "chat" example...
tokio = {features = ["full"] }
async-trait = "0.1"
futures = {}
libp2p = { features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
tracing = {}
tracing-subscriber = {features = ["env-filter"] }

# Serialize messages
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
